deployment/asset-vendor/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: localdomain-asset-vendor-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/server-snippet: |
      server_tokens off;
      client_max_body_size 0;
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header X-Forwarded-Proto $scheme;
      add_header X-Frame-Options SAMEORIGIN;
      add_header X-Content-Type-Options nosniff;
      add_header Strict-Transport-Security "max-age=1296000; includeSubdomains; preload";
      add_header Pragma 'public';
      proxy_set_header Cache-Control 'max-age=1296000, public, must-revalidate, proxy-revalidate';

      proxy_hide_header 'Cache-Control';
      proxy_hide_header 'X-Powered-By';
      proxy_hide_header 'Pragma';

      if ($request_method = "OPTIONS") {
            add_header Access-Control-Allow-Origin $http_origin;
            add_header Access-Control-Allow-Credentials "true";
            add_header Access-Control-Allow-Headers "origin,x-requested-with,content-type,accept,$http_access_control_request_headers";
            add_header Access-Control-Allow-Methods "OPTIONS";

            add_header Access-Control-Max-Age 1728000;
            add_header Content-Type "text/plain charset=UTF-8";
            add_header Content-Length 0;

            return 204;
        }

        if ($request_method ~ "^(GET|POST|PUT|HEAD|DELETE)$") {
            add_header X-Frame-Options SAMEORIGIN;
            add_header X-Content-Type-Options nosniff;
            add_header Strict-Transport-Security "max-age=1296000; includeSubdomains; preload";

            add_header Access-Control-Allow-Origin *;
            add_header Access-Control-Allow-Credentials "true";
            add_header Access-Control-Allow-Headers "*";
            add_header Access-Control-Allow-Methods "GET,POST,PUT,HEAD,DELETE";
        }
    ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  # tls:
  # - secretName: localdomain-ssl
  #   hosts:
  #   - asset-vendor.localdomain.local
  #   - cdn-vendor.localdomain.local
  rules:
  - host: asset-vendor.localdomain.local
    http:
      paths:
      - path: /
        backend:
          serviceName: asset-vendor
          servicePort: 3110
  - host: cdn-vendor.localdomain.local
    http:
      paths:
      - path: /
        backend:
          serviceName: asset-vendor
          servicePort: 3110
